--- a/css/style.css
+++ b/css/style.css
@@ -2,18 +2,129 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: #F09819;
+  font-weight: bold;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  height: 100vh;
+  background: #D31027;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #EA384D, #D31027);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #EA384D, #D31027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
 }
 
 .container {
   display: flex;
-  justify-content: center;
-  margin-top: 100px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.controls {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+h1 {
+  text-align: center;
+  font-size: 48px;
 }
 
 .board {
-  border: 2px solid black;
-  width: 500px;
-  height: 500px;
+  width: 600px;
+  height: 400px;
   display: flex;
   flex-wrap: wrap;
+  background-color: white;
+  margin-bottom: 20px;
+  border: none;
+  box-shadow: 2px 2px 2px rgba(0,0,0,.2);
+}
+
+.circle {
+  width: 100px;
+  height: 100px;
+  background-color: white;
+  border-radius: 50%;
+  border: 1px solid rgba(0,0,0,.4);
+  box-shadow: 2px 2px 2px rgba(0,0,0,.3);
+}
+
+.clear-btn {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #F09819;
+  border: none;
+  color: white;
+  letter-spacing: 1px;
+}
+
+.paint-color {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.square-size {
+  width: 200px;
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
+
+#random-color, 
+#palette, 
+#eraser {
+  display: none;
+}
+
+#random-color + label::before,
+#palette + label::before,
+#eraser + label::before {
+  content: '';
+  width: 18px;
+  height: 18px;
+  display: inline-block;
+  border: 1px solid #F09819;
+  border-radius: 50%;
+  vertical-align: middle;
+  margin-right: 5px;
+  margin-bottom: 3px;
+  cursor: pointer;
+}
+
+#color,
+#size {
+  cursor: pointer;
+}
+
+#random-color:checked + label::before,
+#palette:checked + label::before,
+#eraser:checked + label::before {
+  background: url("../img/icons8-done-24.png") no-repeat center;
+}
+
+input[type=range] {
+  -webkit-appearance: none;
+  width: 60%;
+  background: transparent;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  background: #F09819;
+  height: 2px;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  background-color: #F09819;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  margin-top: -9px;
 }
